[gd_scene load_steps=2 format=3 uid="uid://cmkvxbcovv25x"]

[ext_resource type="Script" uid="uid://dsvbqt60avnv7" path="res://Game/scripts/SelectionUI.gd" id="1_selection_ui"]

[node name="SelectionUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_selection_ui")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.994
anchor_top = 0.986
anchor_right = 0.994
anchor_bottom = 0.986
offset_left = -158.088
offset_top = -111.928
offset_right = -0.0880127
offset_bottom = 0.0719604
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="DescriptionLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Select cards..."
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ValidateButton" type="Button" parent="Panel/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Confirm"

[node name="CancelButton" type="Button" parent="Panel/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"
